--- a/.github/workflows/generate-visualization.yml
+++ b/.github/workflows/generate-visualization.yml
@@ -1,6 +1,9 @@
 name: Generate GitHub Incidents Visualization
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '0 0 1 * *'  # Run monthly on the 1st day
   workflow_dispatch:      # Allow manual triggering
